unpackaged/main/default/objects/Activity/fields/Approval_Request_ID__c.field-meta.xml
<CustomField>
    <fullName>Approval_Request_ID__c</fullName>
    <label>Approval Request ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>