unpackaged/main/default/objects/Activity/fields/Branch_Internal_Task__c.field-meta.xml
<CustomField>
    <fullName>Branch_Internal_Task__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Branch Internal Task</label>
    <type>Checkbox</type>
</CustomField>