unpackaged/main/default/objects/Activity/fields/Branch_Pit_Stop__c.field-meta.xml
<CustomField>
    <fullName>Branch_Pit_Stop__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Branch Pit Stop</label>
    <type>Checkbox</type>
</CustomField>