unpackaged/main/default/objects/Activity/fields/CaliberRedtailid__c.field-meta.xml
<CustomField>
    <fullName>CaliberRedtailid__c</fullName>
    <externalId>true</externalId>
    <label>CaliberRedtailid</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>