unpackaged/main/default/objects/Activity/fields/Completed_Date__c.field-meta.xml
<CustomField>
    <fullName>Completed_Date__c</fullName>
    <formula>IF(NOT(ISNULL(CompletedDateTime)),(IF(MONTH(DATEVALUE(CompletedDateTime))&lt; 10, &#39;0&#39; + TEXT(MONTH(DATEVALUE(CompletedDateTime))),TEXT(MONTH(DATEVALUE(CompletedDateTime))))  + &#39;/&#39; + IF(DAY(DATEVALUE(CompletedDateTime))&lt; 10, &#39;0&#39; + TEXT(DAY(DATEVALUE(CompletedDateTime))),TEXT(DAY(DATEVALUE(CompletedDateTime)))) + &#39;/&#39; + TEXT(YEAR(DATEVALUE(CompletedDateTime)))),&#39;&#39;)</formula>
    <label>Completed Date</label>
    <type>Text</type>
</CustomField>