unpackaged/main/default/objects/Activity/fields/Compliance_Review_Task__c.field-meta.xml
<CustomField>
    <fullName>Compliance_Review_Task__c</fullName>
    <formula>IF(ISPICKVAL(Task_Template_Item__r.Task_Template__r.Queue__c, &quot;Compliance&quot;), true, false)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Compliance Review Task</label>
    <type>Checkbox</type>
</CustomField>