unpackaged/main/default/objects/Activity/fields/DFPG_Financial_Account__c.field-meta.xml
<CustomField>
    <fullName>DFPG_Financial_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>DFPG Financial Account</label>
    <referenceTo>Financial_Account__c</referenceTo>
    <relationshipLabel>Activities</relationshipLabel>
    <relationshipName>Activities</relationshipName>
    <type>Lookup</type>
</CustomField>