unpackaged/main/default/objects/Activity/fields/Envelope__c.field-meta.xml
<CustomField>
    <fullName>Envelope__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Envelope</label>
    <referenceTo>Envelope__c</referenceTo>
    <relationshipLabel>Activities</relationshipLabel>
    <relationshipName>Activities</relationshipName>
    <type>Lookup</type>
</CustomField>