unpackaged/main/default/objects/Activity/fields/Event_Category__c.field-meta.xml
<CustomField>
    <fullName>Event_Category__c</fullName>
    <label>Event Category</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Advisor Meeting</fullName>
            </value>
            <value>
                <fullName>Internal Meeting</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>