unpackaged/main/default/objects/Activity/fields/Financial_Account__c.field-meta.xml
<CustomField>
    <fullName>Financial_Account__c</fullName>
    <label>Financial Account</label>
    <length>255</length>
    <type>Text</type>
</CustomField>