unpackaged/main/default/objects/Activity/fields/Full_Template_Order__c.field-meta.xml
<CustomField>
    <fullName>Full_Template_Order__c</fullName>
    <label>Full Template Order</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>