unpackaged/main/default/objects/Activity/fields/Home_Office_Pit_Stop__c.field-meta.xml
<CustomField>
    <fullName>Home_Office_Pit_Stop__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Home Office Pit Stop</label>
    <type>Checkbox</type>
</CustomField>