unpackaged/main/default/objects/Activity/fields/is1035Rationale__c.field-meta.xml
<CustomField>
    <fullName>is1035Rationale__c</fullName>
    <defaultValue>false</defaultValue>
    <label>is1035Rationale</label>
    <type>Checkbox</type>
</CustomField>