unpackaged/main/default/objects/Activity/fields/isRegBIRationale__c.field-meta.xml
<CustomField>
    <fullName>isRegBIRationale__c</fullName>
    <defaultValue>false</defaultValue>
    <label>isRegBIRationale</label>
    <type>Checkbox</type>
</CustomField>