unpackaged/main/default/objects/Activity/fields/IsSystemAssigned__c.field-meta.xml
<CustomField>
    <fullName>IsSystemAssigned__c</fullName>
    <defaultValue>false</defaultValue>
    <label>IsSystemAssigned</label>
    <type>Checkbox</type>
</CustomField>