unpackaged/main/default/objects/Activity/fields/Owner_in_Operations__c.field-meta.xml
<CustomField>
    <fullName>Owner_in_Operations__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Owner in Operations</label>
    <type>Checkbox</type>
</CustomField>