unpackaged/main/default/objects/Activity/fields/Owner_in_Systems__c.field-meta.xml
<CustomField>
    <fullName>Owner_in_Systems__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Owner in Systems</label>
    <type>Checkbox</type>
</CustomField>