unpackaged/main/default/objects/Activity/fields/OwnerName__c.field-meta.xml
<CustomField>
    <fullName>OwnerName__c</fullName>
    <formula>IF(LEFT(OwnerId,3) = &#39;005&#39;,  Owner:User.FirstName + &#39; &#39; + Owner:User.LastName, IF(LEFT(OwnerId,3) = &#39;00G&#39;,  Owner:Queue.QueueName, &#39;Unassigned&#39;))</formula>
    <label>Owner Name</label>
    <type>Text</type>
</CustomField>