unpackaged/main/default/objects/Activity/fields/Person_Account_Id__c.field-meta.xml
<CustomField>
    <fullName>Person_Account_Id__c</fullName>
    <label>Person Account Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>