unpackaged/main/default/objects/Activity/fields/Principal_Review_Task__c.field-meta.xml
<CustomField>
    <fullName>Principal_Review_Task__c</fullName>
    <formula>IF(ISPICKVAL(Task_Template_Item__r.Task_Template__r.Queue__c, &quot;Principal Review&quot;), true, false)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Principal Review Task</label>
    <type>Checkbox</type>
</CustomField>