unpackaged/main/default/objects/Activity/fields/Recalculate_Case_Template__c.field-meta.xml
<CustomField>
    <fullName>Recalculate_Case_Template__c</fullName>
    <formula>Task_Template_Item__r.Task_Template__r.Recalculate_Template_After_Completion__c</formula>
    <label>Recalculate Case Template</label>
    <type>Checkbox</type>
</CustomField>