unpackaged/main/default/objects/Activity/fields/Reg_BI_Approved__c.field-meta.xml
<CustomField>
    <fullName>Reg_BI_Approved__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Reg BI Approved</label>
    <type>Checkbox</type>
</CustomField>