unpackaged/main/default/objects/Activity/fields/Requested_Due_Date__c.field-meta.xml
<CustomField>
    <fullName>Requested_Due_Date__c</fullName>
    <label>Requested Due Date</label>
    <type>Date</type>
</CustomField>