unpackaged/main/default/objects/Activity/fields/Requires_a_3_Way_Call__c.field-meta.xml
<CustomField>
    <fullName>Requires_a_3_Way_Call__c</fullName>
    <label>Requires a 3-Way Call</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>