unpackaged/main/default/objects/Activity/fields/ROTH_Conversion_Details__c.field-meta.xml
<CustomField>
    <fullName>ROTH_Conversion_Details__c</fullName>
    <label>ROTH Conversion Details</label>
    <type>TextArea</type>
</CustomField>