unpackaged/main/default/objects/Activity/fields/Step__c.field-meta.xml
<CustomField>
    <fullName>Step__c</fullName>
    <label>Step</label>
    <length>255</length>
    <type>Text</type>
</CustomField>