unpackaged/main/default/objects/Activity/fields/Task_Template_Assigned_to_Queue__c.field-meta.xml
<CustomField>
    <fullName>Task_Template_Assigned_to_Queue__c</fullName>
    <formula>IF(TEXT(Task_Template__r.Assigned_To__c) = &#39;Queue&#39;, TRUE, FALSE)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Task Template Assigned to Queue?</label>
    <type>Checkbox</type>
</CustomField>