unpackaged/main/default/objects/Activity/fields/Task_Template_Queue__c.field-meta.xml
<CustomField>
    <fullName>Task_Template_Queue__c</fullName>
    <formula>TEXT(Task_Template__r.Queue__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Task Template Queue</label>
    <type>Text</type>
</CustomField>