unpackaged/main/default/objects/Activity/fields/Testing_Name__c.field-meta.xml
<CustomField>
    <fullName>Testing_Name__c</fullName>
    <formula>Task_Template_Item__r.Testing_Name__c</formula>
    <label>Testing Name</label>
    <type>Text</type>
</CustomField>