unpackaged/main/default/objects/Activity/fields/Text_Subject__c.field-meta.xml
<CustomField>
    <fullName>Text_Subject__c</fullName>
    <formula>Subject</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Text Subject</label>
    <type>Text</type>
</CustomField>