unpackaged/main/default/objects/Activity/fields/Type_User_Advisor_Solutions__c.field-meta.xml
<CustomField>
    <fullName>Type_User_Advisor_Solutions__c</fullName>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Call</fullName>
            </value>
            <value>
                <fullName>Email</fullName>
            </value>
            <value>
                <fullName>In Person</fullName>
            </value>
            <value>
                <fullName>Video Call</fullName>
            </value>
            <value>
                <fullName>Zoom Chat</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>