unpackaged/main/default/objects/Activity/fields/User_on_FA_Team__c.field-meta.xml
<CustomField>
    <fullName>User_on_FA_Team__c</fullName>
    <formula>AND(NOT(ISBLANK(Financial_Advisor_Team__c)),NOT(ISBLANK(Financial_Advisor_Team__r.Users_On_Team__c)),CONTAINS(CASESAFEID($User.Id),Financial_Advisor_Team__r.Users_On_Team__c))</formula>
    <label>User on FA Team</label>
    <type>Checkbox</type>
</CustomField>