unpackaged/main/default/objects/Activity/fields/WhatId_Object__c.field-meta.xml
<CustomField>
    <fullName>WhatId_Object__c</fullName>
    <formula>IF(LEFT(WhatId, 3) = &#39;500&#39;,&#39;Case&#39;,&#39;Other&#39;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>WhatId Object</label>
    <type>Text</type>
</CustomField>